# ClipFetch

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  watch-task.yml
.github/workflows/: browser-integration.yml  ci.yml  ocr-spike.yml  release.yml  web.yml
clipfetch/: __init__.py  __main__.py  appstate.py  browser_download.py  catalog.py  cli.py  collections.py  collector.py  comments.py  constants.py  contracts.py  cookies.py  downloader.py  duplicates.py  errors.py  library.py  media_probe.py  model.py  reels.py  semantic.py  session.py  topics.py  transcription.py  ui.py  visible_text.py  watcher.py  worker.py
clipfetch/api/: __init__.py  app.py  capabilities.py  dependencies.py  errors.py  static.py
clipfetch/api/routes/: __init__.py  accounts.py  bootstrap.py  clips.py  collections.py  diagnostics.py  favorites.py  fs.py  home.py  jobs.py  libraries.py  media.py  playback.py  search.py  topics.py
clipfetch/services/: __init__.py  accounts_service.py  browser_source.py  catalog_service.py  collection_service.py  diagnostics_service.py  download_service.py  favorites_service.py  fs_service.py  home_service.py  ingest_service.py  jobs_service.py  library_service.py  media_service.py  playback_service.py  poster_service.py  probe_service.py  quality_service.py  ranking_service.py  search_service.py  topic_service.py
clipfetch/webui/: .gitignore
docs/: README.md  ROADMAP.md  clipfetch-watch-plan.md  duplicate-calibration.md  release-checklist.md  semantic-benchmark.md  visible-text-ocr-spike.md  watch-user-guide.md
docs/adr/: 0001-monorepo-and-runtime-boundaries.md  README.md
packaging/homebrew/: clipfetch.rb
scripts/: benchmark_semantic.py  benchmark_visible_text.py  generate_visible_text_fixtures.py  smoke_web.py  visible_text_spike.py
tests/: __init__.py  test_accounts_api.py  test_api_scaffold.py  test_appstate.py  test_browser_source.py  test_catalog.py  test_catalog_service.py  test_cli.py  test_collections.py  test_collections_mutation_api.py  test_collector.py  test_comments.py  test_contracts.py  test_cookies.py  test_diagnostics_api.py  test_download_service.py  test_downloader.py  test_duplicates.py  test_favorites_api.py  test_fs_api.py  test_home_api.py  test_ingest_service.py  test_instagram.py  test_job_queue.py  test_jobs_api.py  test_library.py  test_library_bootstrap_api.py  test_library_rescan_api.py  test_library_scale.py  test_media_probe.py  test_media_range_api.py  test_media_service.py  test_model.py  test_playback_api.py  test_poster_api.py  test_poster_service.py  test_quality_service.py  test_ranking_service.py  test_read_only_api.py  test_reels.py  (+15 more)
tests/fixtures/: multilingual_speech.mp3.b64
tests/fixtures/visible_text/: manifest.json
tests/integration/: test_browser_flow.py  test_duplicate_fingerprints.py  test_semantic_model.py  test_transcription_model.py  test_visible_text_model.py
web/: .gitignore  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/api/: client.ts  queries.ts  types.ts
web/src/app/: App.test.tsx  App.tsx  AppShell.module.css  AppShell.tsx  LibrarySelector.module.css  LibrarySelector.tsx  Nav.tsx  PrimaryNav.tsx  RouteAnnouncer.test.tsx  RouteAnnouncer.tsx  navItems.ts
web/src/components/: Badge.module.css  Button.module.css  Button.test.tsx  Button.tsx  ClipCard.module.css  ClipCard.test.tsx  ClipCard.tsx  ClipGrid.module.css  ClipGrid.tsx  ClipListView.tsx  ClipRail.module.css  ClipRail.test.tsx  ClipRail.tsx  Dialog.module.css  Dialog.test.tsx  Dialog.tsx  DirectoryPicker.module.css  (+18 more)
(+40 files in other folders)
