[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clipfetch"
description = "Download short-form videos from your feed to watch offline, straight from the terminal."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "georgyia" }]
keywords = ["instagram", "reels", "downloader", "cli", "short-form"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]
dependencies = ["playwright>=1.40"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/georgyia/ClipFetch"
Issues = "https://github.com/georgyia/ClipFetch/issues"

[project.scripts]
clipfetch = "clipfetch.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.10"]
cookies = ["cryptography>=41"]
semantic = ["fastembed==0.8.0"]
transcribe = ["faster-whisper==1.2.1"]
duplicates = ["av>=11"]
ocr = [
    "av>=11",
    "rapidocr==3.9.1",
    "onnxruntime==1.19.2; python_version < '3.10'",
    "onnxruntime>=1.20; python_version >= '3.10'",
]

[tool.setuptools.dynamic]
version = { attr = "clipfetch.__version__" }

[tool.setuptools.packages.find]
include = ["clipfetch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: opt-in tests that launch a real browser",
    "semantic_integration: opt-in tests that download and run the real embedding model",
    "transcription_integration: opt-in test that downloads/runs Faster-Whisper",
    "duplicate_integration: opt-in transformed-video perceptual-hash calibration",
    "ocr_integration: opt-in test that runs the packaged RapidOCR models",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: import order, B: bugbear, UP: modernise
select = ["E", "W", "F", "I", "B", "UP"]

[tool.mypy]
# 3.10 is the oldest version modern mypy can target; the CI test matrix still
# runs the suite on 3.9, which covers actual runtime compatibility.
python_version = "3.10"
files = ["clipfetch"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
# Playwright is imported lazily in most modules; its sync API is fully typed.
ignore_missing_imports = false
